# nyraOld

./: .gitignore  CMakeLists.txt  LICENSE  README.md  nyra.i
projects/engine/: main.cpp
projects/lovecat/: main.cpp
source/nyra/: nyra_wrap.cpp
source/nyra/include/nyra/: Actor.h  AutoPy.h  Body.h  ButtonInterface.h  Camera.h  Config.h  Constants.h  Engine.h  EngineBase.h  FileSystem.h  GUI.h  Graphics.h  Input.h  InputConstants.h  JSONActor.h  JSONConfig.h  JSONMap.h  JSONNode.h  JSONReader.h  Logger.h  MathUtils.h  Physics.h  PhysicsBody.h  PhysicsRenderer.h  Script.h  ScriptActor.h  ScriptEngine.h  Sprite.h  SwigActor.h  SwigEngine.h  Types.h  Vector2.h
source/nyra/source/: Actor.cpp  AutoPy.cpp  Body.cpp  Camera.cpp  Config.cpp  Constants.cpp  Engine.cpp  FileSystem.cpp  GUI.cpp  Graphics.cpp  Input.cpp  JSONActor.cpp  JSONConfig.cpp  JSONMap.cpp  JSONNode.cpp  JSONReader.cpp  Logger.cpp  PhyicsBody.cpp  Physics.cpp  PhysicsRenderer.cpp  Script.cpp  ScriptActor.cpp  ScriptEngine.cpp  Sprite.cpp  SwigActor.cpp  SwigEngine.cpp
